--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
         </div>
 
-        <div">
+        <div>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand-awareness-light-bulb"/>
             <p>
@@ -75,7 +75,7 @@
 
         <div>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost-management-gears-to-money">
+            <img src="./assets/images/cost-management.png" alt="cost-management-gears-to-money"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
